--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,7 @@
 body {
     display: flex;
+    height: 100vh;
+    width: 100vw;
     align-items: center;
     justify-content: center;
 }
@@ -12,7 +14,7 @@ body {
     margin: 0;
     display: flex;
     box-shadow: 5px 5px 15px;
-    border-radius: 35px;
+    border-radius: 8px;
     background-color: #eee;
     align-items: center;
     justify-content: center;
